--- a/bostoncreamcupcakes.html
+++ b/bostoncreamcupcakes.html
@@ -92,77 +92,77 @@
                   <label class="form-check-label" for="crackers">1/2 cup (118ml) milk</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1/2 cup (118ml) heavy cream</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1/6 cup (33.5g) + 1 1/2 tablespoons granulated sugar, divided</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1/8 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">2 1/2 large egg yolks, room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 1/2 tablespoons cornstarch</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1/2 teaspoon vanilla extract</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">2 tablespoons unsalted butter, softened and cut into 4 pieces</label>
                 </div>
               </div>
               <div class="checklist pb-4">
                 <strong>Cupcakes</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1/4 cup (56.5g) unsalted butter, softened</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1/4 cup (59g) avocado oil</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">7/8 cups (175g) granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">2 large eggs</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 1/2 cups flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1/2 tablespoon baking powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">3/8 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">5/8 cups (150ml) buttermilk, room temperature</label>
                 </div>
               </div>
               <div class="checklist pb-6">
                 <strong>Fudge Frosting</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted"><a href="/fudgefrosting" style="color: #FF6330">Fudge Frosting Recipe</a></label>
                 </div>
               </div>
