--- a/sourcherrystrudel.html
+++ b/sourcherrystrudel.html
@@ -95,11 +95,11 @@
                   <label class="form-check-label" for="crackers">16oz frozen sour cherries* (I use the brand <a href="https://www.wholefoodsmarket.com/product/omena-organics-organic-tart-montmorency-cherries-b07fyj3rct" style="color: #FF6330">Omena Organics</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 stick of butter, melted</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">12 tbsp granulated sugar, divided in 3</label>
                 </div>
               </div>
