--- a/tofu.html
+++ b/tofu.html
@@ -91,11 +91,11 @@
                   <label class="form-check-label" for="crackers">1 block (12-15oz) organic extra-firm tofu</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 tbsp extra-virgin olive oil</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 tbsp tamari</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
@@ -103,7 +103,7 @@
                   <label class="form-check-label" for="crackers">1 tbsp cornstarch</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">White rice</label>
                 </div>
               </div>
