--- a/biscuits.html
+++ b/biscuits.html
@@ -92,24 +92,24 @@
                   <label class="form-check-label" for="crackers">2 cups (250g) flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 tablespoon baking powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 tablespoon granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">6 tablespoons unsalted butter, very cold (unsalted European butter is ideal, but not required)</label>
                   <label class="form-check-label" for="unsalted"><i>*For best results, chill your butter in the freezer for 10-20 minutes before beginning this recipe. It's ideal that the butter is very cold for light, flaky, buttery biscuits.</i></label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">3/4 cup whole milk</label>
                 </div>
               </div>
