--- a/hazelnuttruffles.html
+++ b/hazelnuttruffles.html
@@ -91,11 +91,11 @@
                   <label class="form-check-label" for="crackers">175g hazelnut wafers (I use the brand <a href="https://www.loackerusa.com/classic-hazelnut%2C-creme-filled-wafer-cookies%2C-6.17oz/5637144602.p?back=true" style="color: #FF6330">Loacker</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">2 tbsp (40g) hazelnut spread (I use the brands <a href="https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-hazelnut-cocoa-spread-123-oz-b082tdvptv" style="color: #FF6330">Whole Foods</a> and <a href="https://www.wholefoodsmarket.com/product/nocciolata-organic-hazelnut-spread-with-cocoa-milk-b0016ll5ds" style="color: #FF6330">Rigoni di Asiago</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 1/2 cups hazelnuts (I purchase mine from <a href="https://www.amazon.com/Organic-Blanched-Roasted-Hazelnuts-Pound/dp/B08381NGN6/ref=asc_df_B08381NGN6/?tag=hyprod-20&linkCode=df0&hvadid=459693950627&hvpos=&hvnetw=g&hvrand=5406834105637521999&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9005415&hvtargid=pla-987086866457&th=1" style="color: #FF6330">Amazon</a>)</label>
                 </div>
               </div>
